--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,12 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+show_progress = true
+no-match-test = "testGas"
+
 solc_version = '0.8.28'
+
+optimizer = true
+optimizer_runs = 200
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
