--- a/.github/workflows/gas.yml
+++ b/.github/workflows/gas.yml
@@ -15,6 +15,27 @@ jobs:
     name: gas check
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v4
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            yarn-
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+  
+      # Runs a single command using the runners shell
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
         with:
